auto-test/tests/chapter_17/invalid_types/pointer_conversions/convert_ulong_to_void_ptr.c
int main(void) {
  unsigned long x = 0;
  void *v = x; 
}